assign2/CalParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. CalParser.java */
import java.io.*;
import java.util.*;

public class CalParser/*@bgen(jjtree)*/implements CalParserTreeConstants, CalParserConstants {/*@bgen(jjtree)*/
  protected static JJTCalParserState jjtree = new JJTCalParserState();static String scope;
    static SymbolTable st;
        public static void main(String args[]){
                CalParser parser;
                if (args.length == 0){
                        System.out.println("CAL parser: Reading from input: ");
                        parser = new CalParser(System.in);
                } else if (args.length == 1) {
                        System.out.println("CAL Parser: Reading from file " + args[0] + "..");

                try {
                        parser = new CalParser(new FileInputStream(args[0]));
                } catch (java.io.FileNotFoundException e) {
                        System.out.println("CAL Parser: File " + args[0] + "not found.");
                        return;
                        }
                }
                else {
                        System.out.println("CAL Parser: Usage is one of:");
                        System.out.println("\u0009\u0009java CalParser < inputfile");
                        System.out.println("OR");
                        System.out.println("\u0009\u0009java CalParser inputfile");
                        return;
                }

                try {
                        st = new SymbolTable();
                        SimpleNode root = parser.Prog();

                        System.out.println("\u005cn### AST ###");
                        root.dump("> ");
                        System.out.println("\u005cn### END AST ###");


            st.printSymbolTable();

            MyVisitor v = new MyVisitor();
            root.jjtAccept(v, st);

                        System.out.println("CAL Parser: CAL program parsed successfully");
                        }catch (ParseException e) {
                                System.out.println(e.getMessage());
                                System.out.println("CAL Parser: Encountered errors during parse.");

                }
        }

/***********************************
***** SECTION 4 - THE GRAMMAR *****
***********************************/
  static final public SimpleNode Prog() throws ParseException {
                     /*@bgen(jjtree) Prog */
  ASTProg jjtn000 = new ASTProg(JJTPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
     scope = "global";
      decl_list();
      function_list();
      main();
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void decl_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
    case CONS:
      decl();
      jj_consume_token(SEMIC);
      decl_list();
      break;
    default:
      jj_la1[0] = jj_gen;

    }
  }

  static final public void decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR:
      var_decl();
      break;
    case CONS:
      const_decl();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// Creating Identifier prod rule to return info based on ExprLang.jjt by David Sinclair
  static final public void var_decl() throws ParseException {
                            /*@bgen(jjtree) var_dec */
                            ASTvar_dec jjtn000 = new ASTvar_dec(JJTVAR_DEC);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(VAR);
      id = identifier();
      jj_consume_token(COLON);
      type = type();
                                                            jjtree.closeNodeScope(jjtn000, true);
                                                            jjtc000 = false;
                                                           st.put(id, type, "var",  scope);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public String identifier() throws ParseException {
                                   /*@bgen(jjtree) identifier */
                                   ASTidentifier jjtn000 = new ASTidentifier(JJTIDENTIFIER);
                                   boolean jjtc000 = true;
                                   jjtree.openNodeScope(jjtn000);Token t;
    try {
      t = jj_consume_token(IDENTIFIER);
                       jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
                      jjtn000.value = t.image; {if (true) return t.image;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void const_decl() throws ParseException {
                                /*@bgen(jjtree) const_dec */
                                ASTconst_dec jjtn000 = new ASTconst_dec(JJTCONST_DEC);
                                boolean jjtc000 = true;
                                jjtree.openNodeScope(jjtn000);Token t; String id; String type;
    try {
      t = jj_consume_token(CONS);
      id = identifier();
      jj_consume_token(COLON);
      type = type();
      jj_consume_token(ASSIGN);
      expression();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
        jjtn000.value = t.image;
        st.put(id, type, "const", scope);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void function_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOL:
    case VOID:
      function();
      function_list();
      break;
    default:
      jj_la1[2] = jj_gen;

    }
  }

  static final public void function() throws ParseException {
                             /*@bgen(jjtree) function */
                             ASTfunction jjtn000 = new ASTfunction(JJTFUNCTION);
                             boolean jjtc000 = true;
                             jjtree.openNodeScope(jjtn000);String id; String type;
    try {
      type = type();
      id = identifier();
            //function dec is global, then let parameters fall under func scope.
            st.put(id, type, "function", scope);
            scope = id;
      jj_consume_token(LB);
      parameter_list();
      jj_consume_token(RB);
      jj_consume_token(IS);
      decl_list();
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(RET);
      jj_consume_token(LB);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LB:
      case MINUS:
      case TRUE:
      case FALSE:
      case IDENTIFIER:
      case NUMBER:
                      ASTret jjtn001 = new ASTret(JJTRET);
                      boolean jjtc001 = true;
                      jjtree.openNodeScope(jjtn001);
        try {
          expression();
        } catch (Throwable jjte001) {
                      if (jjtc001) {
                        jjtree.clearNodeScope(jjtn001);
                        jjtc001 = false;
                      } else {
                        jjtree.popNode();
                      }
                      if (jjte001 instanceof RuntimeException) {
                        {if (true) throw (RuntimeException)jjte001;}
                      }
                      if (jjte001 instanceof ParseException) {
                        {if (true) throw (ParseException)jjte001;}
                      }
                      {if (true) throw (Error)jjte001;}
        } finally {
                      if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001,  1);
                      }
        }
        break;
      default:
        jj_la1[3] = jj_gen;
                                           ASTret jjtn002 = new ASTret(JJTRET);
                                           boolean jjtc002 = true;
                                           jjtree.openNodeScope(jjtn002);
        try {
                                           jjtree.closeNodeScope(jjtn002, true);
                                           jjtc002 = false;

        } finally {
                                           if (jjtc002) {
                                             jjtree.closeNodeScope(jjtn002, true);
                                           }
        }
      }
      jj_consume_token(RB);
      jj_consume_token(SEMIC);
      jj_consume_token(END);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         scope = "global";
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public String type() throws ParseException {
                       /*@bgen(jjtree) type */
                       ASTtype jjtn000 = new ASTtype(JJTTYPE);
                       boolean jjtc000 = true;
                       jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        t = jj_consume_token(INT);
        break;
      case BOOL:
        t = jj_consume_token(BOOL);
        break;
      case VOID:
        t = jj_consume_token(VOID);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         jjtn000.value = t.image; {if (true) return t.image;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

// rewrite "more parameters" to stop nesting of param list node
  static final public void parameter_list() throws ParseException {
                                           /*@bgen(jjtree) #parameter_list(true) */
                                           ASTparameter_list jjtn000 = new ASTparameter_list(JJTPARAMETER_LIST);
                                           boolean jjtc000 = true;
                                           jjtree.openNodeScope(jjtn000);String id; String type;
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        id = identifier();
        jj_consume_token(COLON);
                                     ASTparameter jjtn001 = new ASTparameter(JJTPARAMETER);
                                     boolean jjtc001 = true;
                                     jjtree.openNodeScope(jjtn001);
        try {
          type = type();
        } catch (Throwable jjte001) {
                                     if (jjtc001) {
                                       jjtree.clearNodeScope(jjtn001);
                                       jjtc001 = false;
                                     } else {
                                       jjtree.popNode();
                                     }
                                     if (jjte001 instanceof RuntimeException) {
                                       {if (true) throw (RuntimeException)jjte001;}
                                     }
                                     if (jjte001 instanceof ParseException) {
                                       {if (true) throw (ParseException)jjte001;}
                                     }
                                     {if (true) throw (Error)jjte001;}
        } finally {
                                     if (jjtc001) {
                                       jjtree.closeNodeScope(jjtn001,  2);
                                     }
        }
         st.put(id, type, "parameter", scope);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_1;
          }
          jj_consume_token(COMMA);
          id = identifier();
          jj_consume_token(COLON);
                                             ASTparameter jjtn002 = new ASTparameter(JJTPARAMETER);
                                             boolean jjtc002 = true;
                                             jjtree.openNodeScope(jjtn002);
          try {
            type = type();
          } catch (Throwable jjte002) {
                                             if (jjtc002) {
                                               jjtree.clearNodeScope(jjtn002);
                                               jjtc002 = false;
                                             } else {
                                               jjtree.popNode();
                                             }
                                             if (jjte002 instanceof RuntimeException) {
                                               {if (true) throw (RuntimeException)jjte002;}
                                             }
                                             if (jjte002 instanceof ParseException) {
                                               {if (true) throw (ParseException)jjte002;}
                                             }
                                             {if (true) throw (Error)jjte002;}
          } finally {
                                             if (jjtc002) {
                                               jjtree.closeNodeScope(jjtn002,  2);
                                             }
          }
        }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
         st.put(id, type, "parameter", scope);
        break;
      default:
        jj_la1[6] = jj_gen;
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;

      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void main() throws ParseException {
                    /*@bgen(jjtree) main */
  ASTmain jjtn000 = new ASTmain(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
     scope = "main";
      jj_consume_token(MAIN);
      jj_consume_token(BEGIN);
      decl_list();
      statement_block();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void statement_block() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case ELSE:
    case WHILE:
    case BEGIN:
    case SSKIP:
    case IDENTIFIER:
      statement();
      statement_block();
      break;
    default:
      jj_la1[7] = jj_gen;

    }
  }

  static final public void statement() throws ParseException {
                         Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      identifier();
      statement_beta();
      break;
    case BEGIN:
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(END);
      break;
    case IF:
      t = jj_consume_token(IF);
      condition();
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(END);
                                                                  ASTifstate jjtn001 = new ASTifstate(JJTIFSTATE);
                                                                  boolean jjtc001 = true;
                                                                  jjtree.openNodeScope(jjtn001);
      try {
                                                                  jjtree.closeNodeScope(jjtn001,  3);
                                                                  jjtc001 = false;
                                                                 jjtn001.value = t.image;
      } finally {
                                                                  if (jjtc001) {
                                                                    jjtree.closeNodeScope(jjtn001,  3);
                                                                  }
      }
      break;
    case ELSE:
      t = jj_consume_token(ELSE);
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(END);
                                                        ASTels jjtn002 = new ASTels(JJTELS);
                                                        boolean jjtc002 = true;
                                                        jjtree.openNodeScope(jjtn002);
      try {
                                                        jjtree.closeNodeScope(jjtn002,  2);
                                                        jjtc002 = false;
                                                       jjtn002.value = t.image;
      } finally {
                                                        if (jjtc002) {
                                                          jjtree.closeNodeScope(jjtn002,  2);
                                                        }
      }
      break;
    case WHILE:
      t = jj_consume_token(WHILE);
      condition();
      jj_consume_token(BEGIN);
      statement_block();
      jj_consume_token(END);
                                                                     ASTwhil jjtn003 = new ASTwhil(JJTWHIL);
                                                                     boolean jjtc003 = true;
                                                                     jjtree.openNodeScope(jjtn003);
      try {
                                                                     jjtree.closeNodeScope(jjtn003,  2);
                                                                     jjtc003 = false;
                                                                    jjtn003.value = t.image;
      } finally {
                                                                     if (jjtc003) {
                                                                       jjtree.closeNodeScope(jjtn003,  2);
                                                                     }
      }
      break;
    case SSKIP:
      jj_consume_token(SSKIP);
      jj_consume_token(SEMIC);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void statement_beta() throws ParseException {
                               Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      t = jj_consume_token(ASSIGN);
      expression();
      jj_consume_token(SEMIC);
                                               ASTassign jjtn001 = new ASTassign(JJTASSIGN);
                                               boolean jjtc001 = true;
                                               jjtree.openNodeScope(jjtn001);
      try {
                                               jjtree.closeNodeScope(jjtn001,  2);
                                               jjtc001 = false;
                                              jjtn001.value = t.image;
      } finally {
                                               if (jjtc001) {
                                                 jjtree.closeNodeScope(jjtn001,  2);
                                               }
      }
      break;
    case LB:
      t = jj_consume_token(LB);
      arg_list();
      jj_consume_token(RB);
      jj_consume_token(SEMIC);
                                              ASTfunc_call jjtn002 = new ASTfunc_call(JJTFUNC_CALL);
                                              boolean jjtc002 = true;
                                              jjtree.openNodeScope(jjtn002);
      try {
                                              jjtree.closeNodeScope(jjtn002,  2);
                                              jjtc002 = false;
                                             jjtn002.value = t.image;
      } finally {
                                              if (jjtc002) {
                                                jjtree.closeNodeScope(jjtn002,  2);
                                              }
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Expression > Fragment > Expression.
  static final public void expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case TRUE:
    case FALSE:
    case IDENTIFIER:
    case NUMBER:
      fragment();
      binary_arith_op();
      break;
    case LB:
      jj_consume_token(LB);
      expression();
      jj_consume_token(RB);
      binary_arith_op();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//rewrite bin op to allow children
  static final public void binary_arith_op() throws ParseException {
                                Token t;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        t = jj_consume_token(PLUS);
        fragment();
                                     ASTplus jjtn001 = new ASTplus(JJTPLUS);
                                     boolean jjtc001 = true;
                                     jjtree.openNodeScope(jjtn001);
        try {
                                     jjtree.closeNodeScope(jjtn001,  2);
                                     jjtc001 = false;
                                    jjtn001.value = t.image;
        } finally {
                                     if (jjtc001) {
                                       jjtree.closeNodeScope(jjtn001,  2);
                                     }
        }
        break;
      case MINUS:
        t = jj_consume_token(MINUS);
        fragment();
                                      ASTminus jjtn002 = new ASTminus(JJTMINUS);
                                      boolean jjtc002 = true;
                                      jjtree.openNodeScope(jjtn002);
        try {
                                      jjtree.closeNodeScope(jjtn002,  2);
                                      jjtc002 = false;
                                     jjtn002.value = t.image;
        } finally {
                                      if (jjtc002) {
                                        jjtree.closeNodeScope(jjtn002,  2);
                                      }
        }
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void fragment() throws ParseException {
                         Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      t = jj_consume_token(MINUS);
      identifier();
                                      ASTminus_identifier jjtn001 = new ASTminus_identifier(JJTMINUS_IDENTIFIER);
                                      boolean jjtc001 = true;
                                      jjtree.openNodeScope(jjtn001);
      try {
                                      jjtree.closeNodeScope(jjtn001,  1);
                                      jjtc001 = false;
                                     jjtn001.value = t.image;
      } finally {
                                      if (jjtc001) {
                                        jjtree.closeNodeScope(jjtn001,  1);
                                      }
      }
      break;
    case NUMBER:
      t = jj_consume_token(NUMBER);
                          ASTnum jjtn002 = new ASTnum(JJTNUM);
                          boolean jjtc002 = true;
                          jjtree.openNodeScope(jjtn002);
      try {
                          jjtree.closeNodeScope(jjtn002, true);
                          jjtc002 = false;
                         jjtn002.value = t.image;
      } finally {
                          if (jjtc002) {
                            jjtree.closeNodeScope(jjtn002, true);
                          }
      }
      break;
    case TRUE:
      t = jj_consume_token(TRUE);
                        ASTbool jjtn003 = new ASTbool(JJTBOOL);
                        boolean jjtc003 = true;
                        jjtree.openNodeScope(jjtn003);
      try {
                        jjtree.closeNodeScope(jjtn003, true);
                        jjtc003 = false;
                       jjtn003.value = t.image;
      } finally {
                        if (jjtc003) {
                          jjtree.closeNodeScope(jjtn003, true);
                        }
      }
      break;
    case FALSE:
      t = jj_consume_token(FALSE);
                         ASTbool jjtn004 = new ASTbool(JJTBOOL);
                         boolean jjtc004 = true;
                         jjtree.openNodeScope(jjtn004);
      try {
                         jjtree.closeNodeScope(jjtn004, true);
                         jjtc004 = false;
                        jjtn004.value = t.image;
      } finally {
                         if (jjtc004) {
                           jjtree.closeNodeScope(jjtn004, true);
                         }
      }
      break;
    case IDENTIFIER:
      identifier();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LB:
        jj_consume_token(LB);
        arg_list();
        jj_consume_token(RB);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Rewrite condition to make nodes?
  static final public void condition() throws ParseException {
                          Token t;
    condition_beta();
    label_3:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        t = jj_consume_token(AND);
        condition_beta();
                                                      ASTand jjtn001 = new ASTand(JJTAND);
                                                      boolean jjtc001 = true;
                                                      jjtree.openNodeScope(jjtn001);
        try {
                                                      jjtree.closeNodeScope(jjtn001,  2);
                                                      jjtc001 = false;
                                                     jjtn001.value = t.image;
        } finally {
                                                      if (jjtc001) {
                                                        jjtree.closeNodeScope(jjtn001,  2);
                                                      }
        }
        break;
      case OR:
        t = jj_consume_token(OR);
        condition_beta();
                                    ASTor jjtn002 = new ASTor(JJTOR);
                                    boolean jjtc002 = true;
                                    jjtree.openNodeScope(jjtn002);
        try {
                                    jjtree.closeNodeScope(jjtn002,  2);
                                    jjtc002 = false;
                                   jjtn002.value = t.image;
        } finally {
                                    if (jjtc002) {
                                      jjtree.closeNodeScope(jjtn002,  2);
                                    }
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }
